--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "font-awesome": "^4.4.0",
     "jquery": "^2.1.4",
     "keymirror": "^0.1.1",
+    "lodash": "^3.10.1",
     "normalize.css": "^3.0.3",
     "react": "^0.13.3",
     "react-router": "^0.13.3"
