--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "finalproject",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./bin/www",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -35,10 +35,5 @@
     "reactify": "^1.1.1",
     "rimraf": "^2.4.2",
     "vinyl-source-stream": "^1.1.0"
-  },
-  "browserify": {
-    "transform": [
-      "reactify"
-    ]
   }
 }
