--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ampersand-model": "^5.0.3",
     "body-parser": "^1.14.1",
     "cookie-parser": "^1.4.0",
     "express": "^4.13.3",
@@ -19,6 +18,7 @@
     "jquery": "^2.1.4",
     "keymirror": "^0.1.1",
     "lodash": "^3.10.1",
+    "mongodb": "^2.0.45",
     "morgan": "^1.6.1",
     "normalize.css": "^3.0.3",
     "path": "^0.12.7",
