--- a/package.json
+++ b/package.json
@@ -5,36 +5,41 @@
   "main": "./bin/www",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./bin/www"
+    "start": "node ./bin/www",
+    "postinstall": "gulp",
+    "local": "nodemon ./bin/www"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.14.1",
-    "cookie-parser": "^1.4.0",
-    "express": "^4.13.3",
-    "flux": "^2.0.3",
-    "font-awesome": "^4.4.0",
-    "jade": "^1.11.0",
-    "jquery": "^2.1.4",
-    "keymirror": "^0.1.1",
-    "lodash": "^3.10.1",
-    "mongodb": "^2.0.45",
-    "morgan": "^1.6.1",
-    "normalize.css": "^3.0.3",
-    "path": "^0.12.7",
-    "react": "^0.13.3",
-    "react-router": "^0.13.3"
+    "body-parser": "1.14.1",
+    "cookie-parser": "1.4.0",
+    "express": "4.13.3",
+    "flux": "2.0.3",
+    "font-awesome": "4.4.0",
+    "jade": "1.11.0",
+    "jquery": "2.1.4",
+    "keymirror": "0.1.1",
+    "lodash": "3.10.1",
+    "mongodb": "2.0.45",
+    "morgan": "1.6.1",
+    "normalize.css": "3.0.3",
+    "path": "0.12.7",
+    "react": "0.13.3",
+    "react-router": "0.13.3"
   },
   "devDependencies": {
-    "browserify": "^11.0.1",
-    "gulp": "^3.9.0",
-    "gulp-sass": "^2.0.4",
-    "gulp-serve": "^1.0.0",
-    "gulp-util": "^3.0.6",
-    "json-server": "^0.7.25",
-    "reactify": "^1.1.1",
-    "rimraf": "^2.4.2",
-    "vinyl-source-stream": "^1.1.0"
+    "browserify": "11.0.1",
+    "gulp": "3.9.0",
+    "gulp-sass": "2.0.4",
+    "gulp-serve": "1.0.0",
+    "gulp-util": "3.0.6",
+    "json-server": "0.7.25",
+    "reactify": "1.1.1",
+    "rimraf": "2.4.2",
+    "vinyl-source-stream": "1.1.0"
+  },
+  "engines": {
+    "node": "5.0.0"
   }
 }
